# kaldi

src/: CMakeLists.txt  protect_old_makefiles.sh
src/base/: CMakeLists.txt
